[gd_scene load_steps=5 format=3 uid="uid://jgjn704ixtq4"]

[ext_resource type="FontFile" uid="uid://coj3rdtalnn11" path="res://fonts/shogunate/Shogunate-MVYep.otf" id="1_hbxyl"]
[ext_resource type="Script" path="res://global/notifications/notification_panel.gd" id="1_rh2h8"]
[ext_resource type="FontFile" uid="uid://il1upg0x2273" path="res://fonts/small_pixel-7.ttf" id="2_0jxvk"]
[ext_resource type="Texture2D" uid="uid://qqwd014l0etw" path="res://art/bin.png" id="3_b8t1a"]

[node name="NotificationPanel" type="Node2D"]
script = ExtResource("1_rh2h8")

[node name="Window" type="Window" parent="."]
title = "Notification"
initial_position = 2
size = Vector2i(600, 480)
transient = true
exclusive = true

[node name="VBoxContainer" type="VBoxContainer" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Window/VBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = -3
columns = 2

[node name="FromLabel" type="Label" parent="Window/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0jxvk")
theme_override_font_sizes/font_size = 22
text = "From:"

[node name="FromLabelValue" type="Label" parent="Window/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0jxvk")
theme_override_font_sizes/font_size = 22
text = "director@eva.org"

[node name="ToLabel" type="Label" parent="Window/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0jxvk")
theme_override_font_sizes/font_size = 22
text = "To:"

[node name="ToLabelValue" type="Label" parent="Window/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0jxvk")
theme_override_font_sizes/font_size = 22
text = "director@eva.org"

[node name="SubjectLabel" type="Label" parent="Window/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0jxvk")
theme_override_font_sizes/font_size = 22
text = "Subject:"

[node name="SubjectLabelValue" type="Label" parent="Window/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0jxvk")
theme_override_font_sizes/font_size = 18
text = "subject value"
clip_text = true
text_overrun_behavior = 3

[node name="MarginContainer" type="MarginContainer" parent="Window/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="PanelContainer" type="PanelContainer" parent="Window/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(580, 350)
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainerButtons" type="MarginContainer" parent="Window/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Window/VBoxContainer/MarginContainerButtons"]
layout_mode = 2
alignment = 2

[node name="OkButton" type="Button" parent="Window/VBoxContainer/MarginContainerButtons/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0jxvk")
theme_override_font_sizes/font_size = 24
text = "Ok"

[node name="DeleteButton" type="Button" parent="Window/VBoxContainer/MarginContainerButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_hbxyl")
icon = ExtResource("3_b8t1a")

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="Window/VBoxContainer/MarginContainerButtons/HBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="Window/VBoxContainer/MarginContainerButtons/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
